cmd/service-sample/k8s/01-service-sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-practice
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-practice
  template:
    metadata:
      labels:
        app: app-practice
    spec:
      containers:
      - name: app-practice
        image: entropypool/app-practice:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: app-practice
  namespace: kube-system
spec:
  ports:
  - name: api
    port: 32759
    targetPort: 32759
  selector:
    app: app-practice
