cmd/service-sample/k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-practice-npool-top-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: app-practice-npool
    k8s.kuboard.cn/workload: app-practice-npool
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-app-practice-prefix@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http:
        paths:
          - path: /api/app-practice
            backend:
              serviceName: app-practice
              servicePort: 32759

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-practice-xpool-top-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: app-practice-xpool
    k8s.kuboard.cn/workload: app-practice-xpool
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-app-practice-prefix@kubernetescrd

spec:
  rules:
    - host: api.xpool.top
      http:
        paths:
          - path: /api/app-practice
            backend:
              serviceName: app-practice
              servicePort: 32759

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-app-practice-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/app-practice
